fix: change margin top in _spacing.scss

--- a/src/assets/sass/_spacing.scss
+++ b/src/assets/sass/_spacing.scss
@@ -1,3 +1,14 @@
 .m-comp {
-    @apply mt-[150px];
+  @apply mt-[150px];
+  @media screen and (max-width: 1280px) {
+    @apply mt-[125px];
+  }
+
+  @media screen and (max-width: 1024px) {
+    @apply mt-[115px];
+  }
+
+  @media screen and (max-width: 768px) {
+    @apply mt-[100px];
+  }
 }
